welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:10: error: type mismatch;
 found   : Unit
 required: Boolean
    if (bSmile!=true){
    ^